# rust-portfolio-tutorial

./: README.md  architecture.md  backend.md  deployment.md  frontend.md
complete-source/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
complete-source/.github/workflows/: deploy.yml
complete-source/docs/: DATABASE_MIGRATION.md  DEPLOYMENT.md
complete-source/migrations/: 20240101_init.sql  20241121_rename_order_index.sql  20250101000000_create_pages.sql  20250102000000_create_admin.sql
complete-source/scripts/: migrate_db.sh
complete-source/src/: csrf.rs  lib.rs  main.rs  models.rs  templates.rs  test_json.rs  upload.rs
complete-source/src/routes/: admin.rs  api.rs  auth.rs  mod.rs  public.rs
complete-source/static/css/: admin.css  styles.css  timeline.css
complete-source/static/js/: admin-blocks.js  admin-dashboard.js  admin.js  background.js  contact.js  media-embed.js  project.js  router.js  timeline.js  ui.js  unified-player.js  video-loader.js
complete-source/templates/: about.html  base.html  contact.html  index.html  project.html
complete-source/templates/admin/: block_form.html  dashboard.html  login.html  page_form.html  pages_list.html  project_blocks.html  project_form.html  settings.html
course/: 01-intro-and-architecture.md  02-setup-and-installation.md  03-building-the-backend.md  04-building-the-frontend.md  05-admin-and-auth.md  06-deployment-pipeline.md
