[package]
name = "artist-portfolio"
version = "0.1.0"
edition = "2021"
default-run = "artist-portfolio"


[lib]
name = "artist_portfolio"
path = "src/lib.rs"

[dependencies]
askama = "0.12.0"
axum = { version = "0.8", features = ["multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
include_dir = "0.7.4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "time"] }
time = { version = "0.3.44", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tower-sessions = { version = "0.14.0", features = ["signed"] }
base64ct = "=1.6.0"
home = "=0.5.9"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
sha1 = "0.10"
chrono = "0.4"
argon2 = "0.5"
mime_guess = "2.0.5"
dotenvy = { version = "0.15.7", features = ["clap"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }

